some more modules and setup

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,10 @@
-<img
-  class="dashboard-image"
-  src="../assets/images/dashboard/2453195001_67396bbc34_o.jpg"
-  alt="water-surface">
+<div class="dashboard-content">
+  <img
+    class="dashboard-image"
+    src="../assets/images/dashboard/2453195001_67396bbc34_o.jpg"
+    alt="water-surface">
 
-<div class="welcome">
-  It is not down in any map
+  <div class="welcome">
+    <!-- It is not down in any map -->
+  </div>
 </div>
