--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,8 @@
     <a class="nav-link" href="">Email</a>
   </div>
 </header>
-<main>
-  <article class="main-window">
+<main class="main-window">
+  <article class="main-article">
     <router-outlet></router-outlet>
   </article>
 </main>
