added to the about page and updated some components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<header>
+<header class="sidebar-header">
   <a class="logo" href="">
-    {{title}}
-    <span class="logo-description">UX Research</span>
+    Peter Cutler
+    <span class="logo-description">Usability Person</span>
   </a>
   <nav class="main-nav">
     <ul class="nav-list">
@@ -19,7 +19,5 @@
   </div>
 </header>
 <main class="main-window">
-  <article class="main-article">
-    <router-outlet></router-outlet>
-  </article>
+  <router-outlet></router-outlet>
 </main>
