add headers and footers; shadows

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,11 @@
 <article class="about-content">
 
-  <app-article-heading></app-article-heading>
-
-  <header class="about-header">
+  <header class="subject-header">
     <div class="heading">
       About
     </div>
     <div class="subheading">
-      Recent Biography
+      Bio and contact information
     </div>
   </header>
 
@@ -67,7 +65,7 @@
 
   </div>
 
-  <footer class="about-footer">
+  <footer class="main-footer">
     <div class="copyright-text">
       &copy; Copyright 2018, Peter Cutler
     </div>
