--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -1,3 +1,20 @@
-<p>
-  cv works!
-</p>
+<article class="cv-content">
+
+  <header class="subject-header">
+    <div class="heading">
+      CV
+    </div>
+    <div class="subheading">
+      Professional positions, schools, skills, etc.
+    </div>
+  </header>
+
+  <div class="cv-main">
+  </div>
+
+  <footer class="main-footer">
+    <div class="copyright-text">
+      &copy; Copyright 2018, Peter Cutler
+    </div>
+  </footer>
+</article>
