--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -1,41 +1,5 @@
-.about-content {
-  padding: 2.5em 2em;
-
-
-  @include respond-to('large') {
-    padding: 2.5em 3.5em;
-  }
-}
-
-.about-header {
-  border-bottom: 1px solid $header-rule;
-  line-height: 1.6em;
-
-  .heading {
-    font-weight: bold;
-    color: $bay-blue;
-  }
-
-  .subheading {
-    color: $deep-gray;
-    padding-bottom: 1em;
-  }
-}
-
-.about-footer {
-  border-top: 1px solid $header-rule;
-  margin-top: 2em;
-
-  .copyright-text {
-    margin-top: 1.4em;
-    font-size: .9em;
-    color: $medium-gray;
-  }
-}
-
 .about-main {
   display: grid;
-  margin-top: 2em;
   grid-gap: 2em;
   max-width: 48em;
 
@@ -75,5 +39,10 @@
     font-size: 1.2em;
     line-height: 1.4em;
     padding-bottom: 1em;
+
+    // &::selection {
+    //   background: $bay-blue;
+    //   color: $light-white;
+    // }
   }
 }
