--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,5 +6,7 @@
 // Site components
 @import './nav';
 @import './main';
+@import './header-footer';
 @import './dashboard';
 @import './about';
+@import './work';
