--- a/src/app/writing/writing.component.html
+++ b/src/app/writing/writing.component.html
@@ -1,3 +1,20 @@
-<p>
-  writing works!
-</p>
+<article class="writing-content">
+
+  <header class="subject-header">
+    <div class="heading">
+      Writing
+    </div>
+    <div class="subheading">
+      Essays, posts, blogs, etc.
+    </div>
+  </header>
+
+  <div class="writing-main">
+  </div>
+
+  <footer class="main-footer">
+    <div class="copyright-text">
+      &copy; Copyright 2018, Peter Cutler
+    </div>
+  </footer>
+</article>
