--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -4,3 +4,14 @@
     max-width: 1280px;
   }
 }
+
+.about-content,
+.cv-content,
+.work-content,
+.writing-content {
+  padding: 2.5em 2em;
+
+  @include respond-to('large') {
+    padding: 2.5em 3.5em;
+  }
+}
