add more content for writing and work

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -24,7 +24,9 @@
           <a
             class="contact-link"
             target="_blank"
-            href="">Email</a>
+            href="mailto:petergcutler@gmail.com">
+            Email
+          </a>
         </div>
 
         <div class="contact-row">
