--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -10,6 +10,10 @@
   </header>
 
   <div class="cv-main">
+    <a
+      class="button-bright"
+      target="_blank"
+      href="https://linkedin.com/in/petergcutler/">LinkedIn Resume</a>
   </div>
 
   <footer class="main-footer">
