--- a/src/app/work-details/work-details.component.html
+++ b/src/app/work-details/work-details.component.html
@@ -1,3 +1,23 @@
-<button (click)="goBack()">go back</button>
+<article class="work-details">
+  <header class="subject-header">
+    <div class="heading">
+      {{work.name}}
+    </div>
+    <div class="subheading">
+      <div class="go-back">
+        <span class="arrow-left-solid"></span>
+        <span (click)="goBack()" class="back-text">Back to list</span>
+      </div>
+    </div>
+  </header>
 
-<div *ngIf="work" class="work-detail">{{work.name}}</div>
+  <div *ngIf="work" class="work-detail">
+    {{work.name}}
+  </div>
+
+  <footer class="main-footer">
+    <div class="copyright-text">
+      &copy; Copyright 2018, Peter Cutler
+    </div>
+  </footer>
+</article>
