--- a/src/app/writing/writing.component.html
+++ b/src/app/writing/writing.component.html
@@ -10,6 +10,31 @@
   </header>
 
   <div class="writing-main">
+    
+    <div class="spotlight-articles">
+      <h2 class="articles-intro">
+        Selected writings
+      </h2>
+      <ul class="article-list">
+        <li class="article-item">
+          <a class="article-link" href="">A season of faith's perfection</a>
+        </li>
+        <li class="article-item">
+          <a class="article-link" href="">Lincoln in the Bardo</a>
+        </li>
+        <li class="article-item">
+          <a class="article-link" href="">The Seventh Seal</a>
+        </li>
+        <li class="article-item">
+          <a class="article-link" href="">The Goldberg Variations BWV 944</a>
+        </li>
+      </ul>
+    </div>
+
+    <a
+      class="button-bright"
+      target="_blank"
+      href="https://medium.com/@petergcutler">See all Medium posts</a>
   </div>
 
   <footer class="main-footer">
