--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="sidebar-header">
   <a class="logo" routerLink="/about">
     Peter Cutler
-    <span class="logo-description">UX Researcher</span>
+    <span class="logo-description">UX Research</span>
   </a>
   <nav class="main-nav">
     <ul class="nav-list">
