remove article heading

--- a/src/app/article-heading/article-heading.component.html
+++ b/src/app/article-heading/article-heading.component.html
@@ -1,6 +1,6 @@
 <div class="article-heading">
-  {{page.heading}}
+  <!-- {{page.heading}} -->
 </div>
 <div class="article-subheading">
-  {{page.subheading}}
+  <!-- {{page.subheading}} -->
 </div>
