abstract header and footer

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,9 @@
 <article class="about-content">
 
-  <header class="subject-header">
-    <div class="heading">
-      About
-    </div>
-    <div class="subheading">
-      Bio and contact information
-    </div>
-  </header>
+  <app-article-header
+    header="About"
+    subheader="Bio and contact information">
+  </app-article-header>
 
   <div class="about-main">
 
@@ -67,9 +63,5 @@
 
   </div>
 
-  <footer class="main-footer">
-    <div class="copyright-text">
-      &copy; Copyright 2018, Peter Cutler
-    </div>
-  </footer>
+  <app-article-footer></app-article-footer>
 </article>
