--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -1,13 +1,8 @@
 <article class="cv-content">
-
-  <header class="subject-header">
-    <div class="heading">
-      CV
-    </div>
-    <div class="subheading">
-      Professional positions, schools, skills, etc.
-    </div>
-  </header>
+  <app-article-header
+    header="CV"
+    subheader="Professional positions, schools, skills, etc.">
+  </app-article-header>
 
   <div class="cv-main">
     <a
@@ -16,9 +11,5 @@
       href="https://linkedin.com/in/petergcutler/">LinkedIn Resume</a>
   </div>
 
-  <footer class="main-footer">
-    <div class="copyright-text">
-      &copy; Copyright 2018, Peter Cutler
-    </div>
-  </footer>
+  <app-article-footer></app-article-footer>
 </article>
