--- a/src/app/work-details/work-details.component.html
+++ b/src/app/work-details/work-details.component.html
@@ -15,9 +15,5 @@
     {{work.name}}
   </div>
 
-  <footer class="main-footer">
-    <div class="copyright-text">
-      &copy; Copyright 2018, Peter Cutler
-    </div>
-  </footer>
+  <app-article-footer></app-article-footer>
 </article>
