--- a/src/app/writing/writing.component.html
+++ b/src/app/writing/writing.component.html
@@ -1,16 +1,11 @@
 <article class="writing-content">
-
-  <header class="subject-header">
-    <div class="heading">
-      Writing
-    </div>
-    <div class="subheading">
-      Essays, posts, blogs, etc.
-    </div>
-  </header>
+  <app-article-header
+    header="Writing"
+    subheader="Essays, posts, blogs, etc.">
+  </app-article-header>
 
   <div class="writing-main">
-    
+
     <div class="spotlight-articles">
       <h2 class="articles-intro">
         Selected writings
@@ -37,9 +32,5 @@
       href="https://medium.com/@petergcutler">See all Medium posts</a>
   </div>
 
-  <footer class="main-footer">
-    <div class="copyright-text">
-      &copy; Copyright 2018, Peter Cutler
-    </div>
-  </footer>
+  <app-article-footer></app-article-footer>
 </article>
