--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,6 +10,7 @@ $medium-gray: rgba(0, 0, 0, 0.5);
 $deep-gray: #222;
 
 $white: #fff;
+$nav2: #30336b;
 
 // Nav
 $nav: $big-barracuda;
@@ -19,6 +20,10 @@ $logo-description: $dark-white;
 
 // Mains
 $header-rule: $light-gray;
+
+// Borders
+$border-thin: 1px;
+$border-medium: 2px;
 
 // Media Queries
 $breakpoints: (
