--- a/src/scss/_work-details.scss
+++ b/src/scss/_work-details.scss
@@ -14,7 +14,7 @@
 
 .back-text {
   text-decoration: none;
-  border-bottom: 1px solid;
+  border-bottom: $border-thin solid;
 }
 
 .arrow-left-solid {
