--- a/src/scss/_work-list.scss
+++ b/src/scss/_work-list.scss
@@ -10,8 +10,8 @@
   margin: .5em;
   padding: 1em;
   background-color: $white;
-  color: $deep-gray;
-  border: 1px solid $deep-gray;
+  color: $white;
+  // border: $border-thin solid $deep-gray;
   border-radius: .2em;
   cursor: pointer;
 
