--- a/src/scss/_cv.scss
+++ b/src/scss/_cv.scss
@@ -2,7 +2,7 @@
 //   display: inline-block;
 //   padding: .6em;
 //   margin: 1em 0;
-//   border: 1px solid $bay-blue;
+//   border: $border-thin solid $bay-blue;
 //   border-radius: .2em;
 //   cursor: pointer;
 //   text-decoration: none;
@@ -10,6 +10,6 @@
 //
 //   &:hover {
 //     color: $elder-salmon;
-//     border: 1px solid $elder-salmon;
+//     border: $border-thin solid $elder-salmon;
 //   }
 // }
