update work routing

--- a/src/app/work-items/work-uw-oculus_onboarding.html
+++ b/src/app/work-items/work-uw-oculus_onboarding.html
@@ -9,3 +9,9 @@
     This is a long body paragraph.
   </div>
 </div>
+<!--
+each has own template
+each has own assets
+
+share styles
+share controller/component -->
