--- a/src/app/work-details/work-details.component.html
+++ b/src/app/work-details/work-details.component.html
@@ -1,7 +1,7 @@
 <article class="work-details">
   <header class="subject-header">
     <div class="heading">
-      {{work.name}}
+      {{work.display}}
     </div>
     <div class="subheading">
       <div class="go-back">
@@ -12,7 +12,7 @@
   </header>
 
   <div *ngIf="work" class="work-detail">
-    {{work.name}}
+    {{work.display}}
   </div>
 
   <app-article-footer></app-article-footer>
