--- a/src/app/work/work-details/work-details.component.html
+++ b/src/app/work/work-details/work-details.component.html
@@ -11,7 +11,7 @@
     </div>
   </header>
 
-  <app-work-content work="work" *ngIf="work" class="work-content">
+  <app-work-content [work]="work" *ngIf="work" class="work-content">
   </app-work-content>
 
   <app-article-footer></app-article-footer>
