--- a/src/app/work/work-content/work-content.component.html
+++ b/src/app/work/work-content/work-content.component.html
@@ -1,11 +1,21 @@
-<div class="work-image">
+<!-- <div class="work-image">
   {{work.img}} work-image
-</div>
+</div> -->
+<div class="work-entry">
+  <div class="work-metadata">
+    <div class="work-client">
+      {{work.client}}
+    </div>
+    <div class="work-tags">
+      <ul>
+        <li class="work-tag" *ngFor="let tag of work.tags">{{tag}}</li>
+      </ul>
+    </div>
+  </div>
 
-<div class="work-tags">
-  <ul>
-    <li class="work-tag" *ngFor="let tag of work.tags">{{tag}}</li>
-  </ul>
-</div>
+  <div class="work-description">
+    {{work.description}}
+  </div>
 
-<div class="work-description">{{work.description}}</div>
+  <div [innerHtml]="myTemplate"></div>
+</div>
