more structure for work display

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -43,21 +43,18 @@
 
     <div class="primary-content">
       <div class="bio">
+
         <p>
           Hello!
         </p>
 
         <p>
-          According to my theory you interfered with with your parent's first meeting. They don't meet, they don't fall in love, they won't get married and they wont have kids. That's why your older brother's disappeared from that photograph. Your sister will follow and unless you repair the damages, you will be next. Ahh. I'll be at my grandma's. Here, let me give you the number. Bye. Nothing's coming to my mind. Hey c'mon, I had to change, you think I'm going back in that zoot suit? The old man really came through it worked.
+          I'm Peter Cutler, and I'm a UX researcher living in Seattle, Washington.
+          I'm currently working towards my Master's in Human Centered Design & Engineering
+          at the University of Washington. I created this site to share some of my work
+          from the program. If you have any questions, please ask.
         </p>
 
-        <p>
-          You wait and see, Mr. Caruthers, I will be mayor and I'll be the most powerful mayor in the history of Hill Valley, and I'm gonna clean up this town. Look, I'm just not ready to ask Lorraine out to the dance, and not you, nor anybody else on this planet is gonna make me change my mind. Marty, don't go this way. Strickland's looking for you. If you're caught it'll be four tardies in a row. There's that word again, heavy. Why are things so heavy in the future. Is there a problem with the Earth's gravitational pull? Bear with me, Marty, all of your questions will be answered. Roll tape, we'll proceed.
-        </p>
-
-        <p>
-          Hey, not too early I sleep in on Saturday. Oh, McFly, your shoe's untied. Don't be so gullible, McFly. You got the place fixed up nice, McFly. I have you're car towed all the way to your house and all you've got for me is light beer. What are you looking at, butthead. Say hi to your mom for me. Hey. No, Biff, you leave her alone. I'll be at my grandma's. Here, let me give you the number. Bye. I'll get it back to you, alright?
-        </p>
       </div>
     </div>
 
