--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,7 +10,9 @@
 @import './nav';
 @import './main';
 @import './header-footer';
+
 @import './work-entry';
+@import './work-entry-html';
 
 // Pages
 @import './dashboard';
