--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,7 +1,6 @@
 .main-window {
   @include respond-to('medium') {
     padding-left: 15em;
-    max-width: 1280px;
   }
 }
 
@@ -11,6 +10,8 @@
 .work-details,
 .writing-content {
   padding: 2.5em 2em;
+  max-width: 56em;
+  margin: 0 auto;
 
   @include respond-to('large') {
     padding: 2.5em 3.5em;
