--- a/src/scss/_work-list.scss
+++ b/src/scss/_work-list.scss
@@ -1,21 +1,45 @@
+.work-content {
+  max-width: 28em;
+  margin: 0 auto;
+
+  @include respond-to('large') {
+    max-width: 60em;
+    margin: 0 auto;
+  }
+}
+
 .work-main {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
+  display: grid;
+  position: relative;
+  grid-row-gap: 1em;
+
+  @include respond-to('large') {
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    grid-column-gap: 2em;
+    grid-row-gap: 2em;
+  }
 }
 
 .work-item {
-  width: 24em;
-  height: 12em;
-  margin: .5em;
-  padding: 1em;
-  background-color: $white;
+  max-width: 30em;
+  max-height: 20em;
   color: $white;
-  // border: $border-thin solid $deep-gray;
-  border-radius: .2em;
   cursor: pointer;
-
   &:hover {
     @include box-shadow(3);
   }
+}
+
+.work-item-title {
+  display: block;
+  position: absolute;
+  padding-top: 1em;
+  padding-left: 1em;
+}
+
+.work-item-image {
+  display: block;
+  max-width: 100%;
+  object-fit: cover;
 }
