--- a/src/app/work/work-list/work-list.component.html
+++ b/src/app/work/work-list/work-list.component.html
@@ -8,6 +8,7 @@
 
     <div
       class="work-item"
+      [ngClass]="work.url"
       *ngFor="let work of works; index as i;"
       routerLink="/work/{{work.url}}">
       <span class="work-item-title">{{work.display}}</span>
