--- a/src/scss/_work-list.scss
+++ b/src/scss/_work-list.scss
@@ -49,6 +49,10 @@
   &.uw-rcrc-complex-systems-and-vca {
     background-image: url('/assets/images/work/thumbnails/uw-rcrc-complex-systems-and-vca.png');
   }
+
+  &.uw-research-with-yarn {
+    background-image: url('/assets/images/work/thumbnails/uw-research-with-yarn.png');
+  }
 }
 
 .work-item-title {
