add more assets

--- a/src/scss/_work-list.scss
+++ b/src/scss/_work-list.scss
@@ -53,6 +53,14 @@
   &.uw-research-with-yarn {
     background-image: url('/assets/images/work/thumbnails/uw-research-with-yarn.png');
   }
+
+  &.crowdskout-data-visualization-systems {
+    background-image: url('/assets/images/work/thumbnails/crowdskout-data-visualization-systems.png');
+  }
+
+  &.crowdskout-date-and-time {
+    background-image: url('/assets/images/work/thumbnails/crowdskout-date-and-time.png');
+  }
 }
 
 .work-item-title {
