--- a/src/app/work/work-details/work-details.component.html
+++ b/src/app/work/work-details/work-details.component.html
@@ -14,5 +14,5 @@
   <app-work-content [work]="work" *ngIf="work" class="work-content">
   </app-work-content>
 
-  <app-article-footer></app-article-footer>
+  <app-article-footer [imageCredit]="work.imageCredit" ></app-article-footer>
 </article>
