add more assets aets

--- a/src/scss/_work-list.scss
+++ b/src/scss/_work-list.scss
@@ -61,6 +61,11 @@
   &.crowdskout-date-and-time {
     background-image: url('/assets/images/work/thumbnails/crowdskout-date-and-time.png');
   }
+
+  &.crowdskout-segmenting-audiences {
+    background-image: url('/assets/images/work/thumbnails/crowdskout-segmenting-audiences.png');
+  }
+
 }
 
 .work-item-title {
