update attribution setup

--- a/src/app/article-footer/article-footer.component.html
+++ b/src/app/article-footer/article-footer.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="imageCredit.artist" class="image-attribution">
+<div *ngIf="imageCredit" class="image-attribution">
   <span>Thumbnail image by
     <a target="_blank" href="{{imageCredit.artistSite}}">{{imageCredit.artist}}</a>
     via <a target="_blank" href="{{imageCredit.source}}">Flickr</a>.</span>
