--- a/src/scss/_work-list.scss
+++ b/src/scss/_work-list.scss
@@ -66,6 +66,12 @@
     background-image: url('/assets/images/work/thumbnails/crowdskout-segmenting-audiences.png');
   }
 
+  &.crowdskout-form-editor {
+    background-image: url('/assets/images/work/thumbnails/crowdskout-form-editor.png');
+  }
+
+
+
 }
 
 .work-item-title {
