more work organization

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -51,8 +51,15 @@
         <p>
           I'm Peter Cutler, and I'm a UX researcher living in Seattle, Washington.
           I'm currently working towards my Master's in Human Centered Design & Engineering
-          at the University of Washington. I created this site to share some of my work
-          from the program. If you have any questions, please ask.
+          at the University of Washington.
+        </p>
+
+        <p>
+          I have a diverse background in writing, design, animation, and programming.
+          I've worked with companies both large and small throughout my career,
+          from a global advertising firm to a small startup in my hometown of Washington, D.C.
+          I created this site to share some of my work - please take a look around and feel free
+          to reach out with any questions.
         </p>
 
       </div>
