update work details display

--- a/src/app/work/work-list/work-list.component.html
+++ b/src/app/work/work-list/work-list.component.html
@@ -1,7 +1,7 @@
 <article class="work-content">
   <app-article-header
     header="Work"
-    subheader="Projects from clients and schools">
+    subheader="Projects with clients, companies, and schools">
   </app-article-header>
 
   <div class="work-main">
