--- a/src/scss/_work-details.scss
+++ b/src/scss/_work-details.scss
@@ -1,3 +1,13 @@
+.work-details {
+  max-width: 30em;
+  margin: 0 auto;
+
+  @include respond-to('large') {
+    max-width: 57em;
+    margin: 0 auto;
+  }
+}
+
 .subheading {
   margin-top: .4em;
 }
