--- a/src/app/work/work-details/work-details.component.html
+++ b/src/app/work/work-details/work-details.component.html
@@ -1,7 +1,7 @@
 <article class="work-details">
   <header class="subject-header">
     <div class="heading">
-      {{work.display}}
+      Work
     </div>
     <div class="subheading">
       <div class="go-back">
