--- a/src/scss/_work-entry.scss
+++ b/src/scss/_work-entry.scss
@@ -2,33 +2,47 @@
   color: green;
 }
 
-.work-entry {
+.work-introduction {
   display: grid;
   grid-gap: 2em;
-  // max-width: 48em;
+  padding-bottom: 2em;
+  margin-bottom: 2em;
+  border-bottom: $border-thin solid $header-rule;
 
-  @include respond-to('large') {
+  @include respond-to('larger') {
     grid-template-columns: 1fr 3fr;
     grid-gap: 4em;
   }
+}
+
+.work-body {
+  margin-top: 1em;
+}
+
+.work-metadata {
+  line-height: 1.4em;
+
+  @include respond-to('large') {
+    min-width: 12em;
+    max-width: 20em;
+  }
 
   @include respond-to('larger') {
-    grid-template-columns: 2fr 5fr;
-    grid-gap: 6em;
+    min-width: 16em;
   }
 }
 
-.work-client {
+.work-title {
   font-weight: bold;
   color: $deep-gray;
-  white-space: nowrap;
+  // white-space: nowrap;
 }
 
 .work-tags {
   margin-top: 1em;
   color: $medium-gray;
   text-transform: capitalize;
-  line-height: 1.2em;
+  line-height: 1.4em;
 }
 
 .work-description {
@@ -36,5 +50,11 @@
   top: -0.3em;
   font-family: 'Garamond', serif;
   font-size: 1.2em;
+  line-height: 1.4em;
+}
+
+.work-body {
+  font-family: 'Garamond', serif;
+  font-size: 1em;
   line-height: 1.4em;
 }
