--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -49,18 +49,25 @@
         </p>
 
         <p>
-          I'm Peter Cutler, and I'm a UX researcher living in Seattle, Washington.
+          My name is Peter Cutler, and I'm a UX researcher living in Seattle, Washington.
           I'm currently working towards my Master's in Human Centered Design & Engineering
           at the University of Washington.
         </p>
 
         <p>
+          I'm originally from Washington, D.C., where I grew up and worked before grad school.
+          I've spent time in a number of different tech roles, contributing writing, design,
+          animation, software engineering, and lots of other work to some great companies
+          and clients. I've shared a lot of my work here. Take a look, and feel free to reach out.
+        </p>
+
+        <!-- <p>
           I have a diverse background in writing, design, animation, and programming.
           I've worked with companies both large and small throughout my career,
           from a global advertising firm to a small startup in my hometown of Washington, D.C.
           I created this site to share some of my work - please take a look around and feel free
           to reach out with any questions.
-        </p>
+        </p> -->
 
       </div>
     </div>
